2006-02-10  Jürgen Reuter  <reuter@ipd.uka.de>

	* scm/define-grobs.scm (LigatureBracket): Maintenance bugfix: add
	new connect-to-neighbor, control-points and staff-padding
	properties to make ligature brackets showing up again.

2006-02-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* VERSION: release 2.7.33

	* lily/relocate.cc (prefix_relocation): oops. One TOPLEVEL_VERSION
	too many.

	* Documentation/user/changing-defaults.itely (Difficult tweaks):
	remove applyOutput example.
	(Objects connected to the input): document \tweak, \parenthesize

	* lily/relocate.cc (prefix_relocation): allow "current"
	iso. TOPLEVEL_VERSION for share/lilypond/ suffix. This makes
	changing VERSION in a lily tree less painful.

	* input/regression/parenthesize.ly: new file. 

	* scm/output-lib.scm (parenthesize-element): new function.

	* scm/define-grobs.scm (all-grob-descriptions): add ParenthesesItem.

	* lily/parenthesis-engraver.cc (acknowledge_grob): new file.

	* lily/accidental-engraver.cc (make_standard_accidental): reroute
	cause: accidentals are caused by note heads, not note events. 

2006-02-08  Graham Percival  <gpermus@gmail.com>

	* darwin.patch: small patch from Erlend, thanks!

	* Documentation/user/basic-notation.itely: add stem-neutral example.

	* Documentation/user/putting.itely: clarifications.

2006-02-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/topdocs/NEWS.tely (Top): remove internal cleanup
	note, add more guidelines to what should go into NEWS.

	* input/sakura-sakura.ly: document how to override font.

	* input/regression/font-family-override.ly:  doc -dshow-available-fonts

2006-02-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/midi-item.cc (to_string): truncate time sig at 255 beats.

2006-02-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/convert-ly.py (lilypond_version_re_str): Move from
	convertrules.  Add explicit grouping, needed for python2.2.

2006-02-07  Jan Nieuwenhuizen  <janneke@gnu.org>
